--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@ h6 {
 
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
-</head>
 
-<body>
 
 <style type = "text/css">
 .main-container {
@@ -192,8 +190,6 @@ $(document).ready(function () {
 });
 </script>
 
-<div class="container-fluid main-container">
-
 <!-- tabsets -->
 
 <style type="text/css">
@@ -267,6 +263,15 @@ $(document).ready(function () {
 
 
 
+</head>
+
+<body>
+
+
+<div class="container-fluid main-container">
+
+
+
 
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
@@ -320,8 +325,8 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">HAN Bedrijfskunde</h1>
-<h3 class="subtitle"><em>Semester 2 2018/19</em></h3>
-<h4 class="author"><em>Docenten: Witek ten Hove, David Hartsuiker en Frans Beijderwellen</em></h4>
+<h3 class="subtitle">Semester 2 2018/19</h3>
+<h4 class="author">Docenten: Witek ten Hove, David Hartsuiker en Frans Beijderwellen</h4>
 
 </div>
 
