--- a/wk6.html
+++ b/wk6.html
@@ -329,7 +329,7 @@ $(document).ready(function () {
 
 
 <p>Deze week werk je in je eigen <a href="https://rstudio.cloud/spaces/5344/join?access_code=W0HZjf0cguMPVM5LODaL%2FqHEW8mSGFUk%2BEqMH5aH" target="_blank">R-Notebook</a> en volg je de eerste paar stappen uit het data analyse proces: understanding en preparation.</p>
-<p>Tijdens het werkcollege werk je aan het <a href="https://docs.google.com/document/d/11C3wIJjAp1ueJAh1tNozkiOEg4C73QdIq3pOpMGssS4/copy">Practicum SPSS</a>.</p>
+<p>Tijdens het werkcollege werk je aan het <a href="https://docs.google.com/document/d/11C3wIJjAp1ueJAh1tNozkiOEg4C73QdIq3pOpMGssS4/copy" target="_blank">Practicum SPSS</a>.</p>
 <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/CRISP-DM_Process_Diagram.png/1200px-CRISP-DM_Process_Diagram.png" width=70%></p>
 
 
